--- a/Manual/Rotating Squares.html
+++ b/Manual/Rotating Squares.html
@@ -22,7 +22,7 @@
                     <img src="img/Component/Rotating Squares.svg" class="diagram">
                     <h2>On the Subject of Rotating Squares</h2>
                     <p class="flavour-text">A good memory and a good sense of direction is all you need. Easy, right?</p>
-                    <p>When the needy module activates, press a button that has not been pressed before. Upon doing this successfully, the platform on which the buttons are placed my rotate.</p>
+                    <p>When the needy module activates, press a button that has not been pressed before. Upon doing this successfully, the platform on which the buttons are placed may rotate.</p>
 					<p>When all 16 buttons have been pressed, they will flash red and a sound will play, signaling that every button has returned to an unused stage.</p>
                 </div>
                 <div class="page-footer relative-footer">Page 1 of 1</div>
