--- a/Manual/Boozleglyph Identification.html
+++ b/Manual/Boozleglyph Identification.html
@@ -15,6 +15,12 @@
 		td, th {
             padding: .2em .3em .1em;
         }
+		table {
+			border: none;
+		}
+		.corner {
+			border: none;
+		}
 	</style>
     <script src="js/ktane-utils.js"></script>
 </head>
@@ -29,10 +35,10 @@
                 <div class="page-content">
                     <img src="img/Component/Boozleglyph Identification.svg" class="diagram">
                     <h2>On the Subject of Boozleglyph Identification</h2>
-                    <p class="flavour-text">That's right I've been bamboozled, over and over again...</p>
+                    <p class="flavour-text">That’s right I’ve been bamboozled, over and over again...</p>
                     <p>When this needy activates, a boozleglyph will be displayed. Submit which letter it corresponds to, and then which set contains it. This will disarm the needy. Press the lower screen to submit.</p>
 					<table width = "30%" align = "left">
-				<tr><th></th><th>Set 1</th><th>Set 2</th><th>Set 3</th></tr>
+				<tr><th class='corner'></th><th>Set 1</th><th>Set 2</th><th>Set 3</th></tr>
 				<tr><th>A</th><th><img src = "img/Cryptic Cycle/Set 1 - A.svg" class = 'glyph'></th><th><img src = "img/Cryptic Cycle/Set 2 - A.svg" class = 'glyph'></th><th><img src = "img/Cryptic Cycle/Set 3 - A.svg" class = 'glyph'></th></tr>
 				<tr><th>B</th><th><img src = "img/Cryptic Cycle/Set 1 - B.svg" class = 'glyph'></th><th><img src = "img/Cryptic Cycle/Set 2 - B.svg" class = 'glyph'></th><th><img src = "img/Cryptic Cycle/Set 3 - B.svg" class = 'glyph'></th></tr>
 				<tr><th>C</th><th><img src = "img/Cryptic Cycle/Set 1 - C.svg" class = 'glyph'></th><th><img src = "img/Cryptic Cycle/Set 2 - C.svg" class = 'glyph'></th><th><img src = "img/Cryptic Cycle/Set 3 - C.svg" class = 'glyph'></th></tr>
