--- a/Manual/Hyperneedy.html
+++ b/Manual/Hyperneedy.html
@@ -21,7 +21,7 @@
                 <div class="page-content">
                     <img src="img/Component/Hyperneedy.svg" class="diagram">
                     <h2>On the Subject of Hyperneedy</h2>
-                    <p class="flavour-text">Well, it's two less dimensions to deal with, but the lines are still missing. Lovely.</p>
+                    <p class="flavour-text">Well, it’s two less dimensions to deal with, but the lines are still missing. Lovely.</p>
                     <p>When this needy module activates, 16 floating discs will emerge from the central button. Press the central button, and they will move in a pattern that mimics the rotation of a 4d tesseract.</p>
 					<p>Identify the rotation, then type it using the labeled buttons. If any part of the rotation is entered incorrectly, a strike will be incurred, and the input will be reset.</p>
 					<svg style='width: 7.5cm; float: right' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 125 110">
